005: Added new sections. Fixed container width to max-width. First part of work on sections.

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -5,69 +5,122 @@
     <title>About us</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./about.css">
 </head>
 <body>
 
-    <section class="page-container">
+    <div class="about-page">
 
-        <header class="header">
-            <div class="container">
+        <section class="page-container">
 
-                <div class="container__left">
-                    <div class="header__logo">
+            <header class="header">
+                <div class="container">
 
-                        <span class="header__pic"><a class="header__link" href="#"></a></span>
+                    <div class="container__left">
+                        <div class="header__logo">
 
-                        <span class="header__slogan">
-                            <a class="header__link" href="#">MedDia</a>
-                        </span>
+                            <span class="header__pic"><a class="header__link" href="#"></a></span>
 
+                            <span class="header__slogan">
+                                <a class="header__link" href="#">MedDia</a>
+                            </span>
+
+                        </div>
                     </div>
+
+                    <div class="container__right">
+                        <nav class="header__nav">
+
+                            <ul class="header__list">
+                                <li class="header__item">
+                                    <a class="header__link header__link_item" href="#">
+                                        <span class="header__text">О меддиа</span>
+                                        <span class="header__pic-arrow"></span>
+                                    </a>
+                                </li>
+                                <li class="header__item">
+                                    <a href="#" class="header__link header__link_item">
+                                        <span class="header__text">РУБ | РУС</span>
+                                        <span class="header__pic-arrow"></span>
+                                    </a>
+                                </li>
+                                <li class="header__item">
+                                    <a href="#" class="header__link header__link_item">
+                                        <span class="header__text">Войти</span>
+                                    </a>
+                                </li>
+                                <li class="header__item">
+                                    <a href="#" class="header__link header__link_item">
+                                        <span class="header__pic-heart"></span>
+                                        <span class="header__text">5</span>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </nav>
+                    </div>
+
                 </div>
+            </header>
 
-                <div class="container__right">
-                    <nav class="header__nav">
+            <main class="content">
 
-                        <ul class="header__list">
-                            <li class="header__item">
-                                <a class="header__link header__link_item" href="#">
-                                    <span class="header__text">О меддиа</span>
-                                    <span class="header__pic-arrow"></span>
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__link header__link_item">
-                                    <span class="header__text">РУБ | РУС</span>
-                                    <span class="header__pic-arrow"></span>
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__link header__link_item">
-                                    <span class="header__text">Войти</span>
-                                </a>
-                            </li>
-                            <li class="header__item">
-                                <a href="#" class="header__link header__link_item">
-                                    <span class="header__pic-heart"></span>
-                                    <span class="header__text">5</span>
-                                </a>
-                            </li>
-                        </ul>
+                <section class="content__section">
+                    <div class="container">
+                        <div class="article-wrapper">
+                            <article class="article">
 
-                    </nav>
-                </div>
+                                <h3 class="article__header">О нас.</h3>
+                                <h3 class="article__header article__header_spaceAfter">МедДиа — для людей</h3>
 
-            </div>
-        </header>
+                                <p class="article__text article__text_big article__text_half">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру.</p>
 
-    </section>
+                                <a href="#" class="article__link article__link_intro">Начать практику на MedDia</a>
 
-    <footer class="footer">
+                            </article>
+                        </div>
+                    </div>
+                </section>
+
+                <section class="content__section content__section_gray">
+                    <div class="container">
+                        <div class="article-wrapper article-wrapper_center">
+
+                            <article class="article article_small">
+                                <span class="article__pic article__pic_aqua"></span>
+                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                            </article>
+
+                            <article class="article article_small">
+                                <span class="article__pic article__pic_yellow"></span>
+                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                            </article>
+
+                            <article class="article article_small">
+                                <span class="article__pic article__pic_orangered"></span>
+                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                            </article>
+
+                            <article class="article article_small">
+                                <span class="article__pic article__pic_aqua"></span>
+                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                            </article>
+
+                        </div>
+                    </div>
+                </section>
+
+            </main>
+
+        </section>
+
+        <footer class="footer">
 
 
 
-    </footer>
+        </footer>
+
+    </div>
 
 </body>
 </html>
