007: About page completed.

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -66,47 +66,75 @@
             <main class="content">
 
                 <section class="content__section">
-                    <div class="container">
-                        <div class="article-wrapper">
-                            <article class="article">
+                    <div class="container article-wrapper article-wrapper_intro">
 
-                                <h3 class="article__header">О нас.</h3>
-                                <h3 class="article__header article__header_spaceAfter">МедДиа — для людей</h3>
+                        <article class="article">
 
-                                <p class="article__text article__text_big article__text_half">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру.</p>
+                            <h3 class="article__header">О нас.</h3>
+                            <h3 class="article__header article__header_space-after">МедДиа — для людей</h3>
 
-                                <a href="#" class="article__link article__link_intro">Начать практику на MedDia</a>
+                            <p class="article__text article__text_big article__text_half">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру.</p>
 
-                            </article>
-                        </div>
+                            <a href="#" class="article__link article__link_intro">Начать практику на MedDia</a>
+
+                        </article>
+
                     </div>
                 </section>
 
                 <section class="content__section content__section_gray">
-                    <div class="container">
-                        <div class="article-wrapper article-wrapper_center">
+                    <div class="container article-wrapper article-wrapper_center">
 
-                            <article class="article article_small">
-                                <span class="article__pic article__pic_aqua"></span>
-                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
-                            </article>
+                        <article class="article article_small">
+                            <span class="article__pic article__pic_aqua"></span>
+                            <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                        </article>
 
-                            <article class="article article_small">
-                                <span class="article__pic article__pic_yellow"></span>
-                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
-                            </article>
+                        <article class="article article_small">
+                            <span class="article__pic article__pic_yellow"></span>
+                            <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                        </article>
 
-                            <article class="article article_small">
-                                <span class="article__pic article__pic_orangered"></span>
-                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
-                            </article>
+                        <article class="article article_small">
+                            <span class="article__pic article__pic_orangered"></span>
+                            <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                        </article>
 
-                            <article class="article article_small">
-                                <span class="article__pic article__pic_aqua"></span>
-                                <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
-                            </article>
+                        <article class="article article_small">
+                            <span class="article__pic article__pic_aqua"></span>
+                            <p class="article__text article__text_small">МЕДДИА - это крупнейшая международная интернет-платформа поиска врачей и организации лечения по всему миру. Мы даем пациентам возможность получить второе мнение специалистов мирового уровня и найти наиболее подходящее лечение в более чем 800 клиниках в 40 странах мира. С нами уже сотрудничают тысячи специалистов в самых разнообразных областях медицины.</p>
+                        </article>
 
-                        </div>
+                    </div>
+                </section>
+
+                <section class="content__section">
+                    <div class="container article-wrapper article-wrapper_top-padding article-wrapper_bottom-padding">
+
+                        <article class="article">
+
+                            <h3 class="article__header article__header_center">Партнеры и инвесторы</h3>
+
+                            <div class="article__image article__image_partners"></div>
+
+                        </article>
+
+                    </div>
+                </section>
+
+                <section class="content__section content__section_gray">
+                    <div class="contianer article-wrapper article-wrapper_top-padding">
+
+                        <article class="article">
+
+                            <h3 class="article__header article__header_center">МедДиа во всем мире</h3>
+
+                            <div class="article__image article__image_plane"></div>
+
+                            <div class="article__image article__image_world-map"></div>
+
+                        </article>
+
                     </div>
                 </section>
 
