013: Term navigation now is interactive.

--- a/pages/terms/terms.html
+++ b/pages/terms/terms.html
@@ -68,12 +68,16 @@
                 <div class="container">
 
                     <ul class="term-nav__list">
-                        <li class="term-nav__item term-nav__item_active">
-                            <a href="#" class="term-nav__link">Общие правила использования</a>
-                        </li>
+                        <input type="radio" name="item" class="term-nav__controller" id="firs-item">
                         <li class="term-nav__item">
-                            <a href="#" class="term-nav__link">Политика Конфиденциальности</a>
+                            <label for="firs-item" class="term-nav__link">Общие правила использования</label>
                         </li>
+
+                        <input type="radio" name="item" class="term-nav__controller" id="second-item">
+                        <li class="term-nav__item">
+                            <label for="second-item" class="term-nav__link">Политика Конфиденциальности</label>
+                        </li>
+
                     </ul>
 
                 </div>
