014: Fixed partners block.

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -116,7 +116,63 @@
 
                             <h3 class="article__header article__header_center">Партнеры и инвесторы</h3>
 
-                            <div class="article__image article__image_partners"></div>
+                            <ul class="partners">
+                                
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/khoslaVentures.PNG" alt="khosla-ventures">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/bezosExpeditions.PNG" alt="bezos-expeditions">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/marcBenioff.PNG" alt="marc-benioff">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/foundersFund.PNG" alt="founders-fund">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/SVAngel.PNG" alt="SVAngel">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/dst.PNG" alt="DST">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/goldmanSachs.PNG" alt="goldman-sachs">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/atomico.PNG" alt="ATOMICO">
+                                    </a>
+                                </li>
+
+                                <li class="partners__item">
+                                    <a href="#" class="partners__link">
+                                        <img class="partners__icon" src="../../images/partners/baillieGifford.PNG" alt="baillie-gifford">
+                                    </a>
+                                </li>
+                                
+                            </ul>
 
                         </article>
 
