017: Definetly working interactive terms menu.

--- a/pages/terms/terms.html
+++ b/pages/terms/terms.html
@@ -69,7 +69,7 @@
 
                     <ul class="term-nav__list">
 
-                        <li class="term-nav__item">
+                        <li class="term-nav__item term-nav__item_active">
                             <label for="firs-item" class="term-nav__link">Общие правила использования</label>
                         </li>
 
@@ -178,5 +178,6 @@
 
     </footer>
 
+    <script src="./terms.js"></script>
 </body>
 </html>
