019: New header logo.

--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -19,13 +19,7 @@
 
                     <div class="container__left">
                         <div class="header__logo">
-
-                            <span class="header__pic"><a class="header__link" href="#"></a></span>
-
-                            <span class="header__slogan">
-                                <a class="header__link" href="#">MedDia</a>
-                            </span>
-
+                            <a class="header__link" href="#"></a>
                         </div>
                     </div>
 
