--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -26,6 +26,8 @@
                     <div class="container__right">
                         <nav class="header__nav">
 
+                            <a href="#" class="header__link header__burger"><img src="../../images/burger.svg" alt="Menu" class="header__icon" /></a>
+
                             <ul class="header__list">
                                 <li class="header__item">
                                     <a class="header__link header__link_item" href="#">
@@ -201,5 +203,6 @@
 
     </div>
 
+    <script src="./about.js"></script>
 </body>
 </html>
