023: Mobile friendly terms page.

--- a/pages/terms/terms.html
+++ b/pages/terms/terms.html
@@ -17,18 +17,14 @@
 
                 <div class="container__left">
                     <div class="header__logo">
-
-                        <span class="header__pic"><a class="header__link" href="#"></a></span>
-
-                            <span class="header__slogan">
-                                <a class="header__link" href="#">MedDia</a>
-                            </span>
-
+                        <a class="header__link" href="#"></a>
                     </div>
                 </div>
 
                 <div class="container__right">
                     <nav class="header__nav">
+
+                        <a href="#" class="header__link header__burger"><img src="../../images/burger.svg" alt="Menu" class="header__icon" /></a>
 
                         <ul class="header__list">
                             <li class="header__item">
