029: Little fix for terms page js.

--- a/pages/terms/terms.html
+++ b/pages/terms/terms.html
@@ -65,8 +65,8 @@
 
                     <ul class="term-nav__list">
 
-                        <li class="term-nav__item term-nav__item_active">
-                            <label for="firs-item" class="term-nav__link">Общие правила использования</label>
+                        <li class="term-nav__item">
+                            <label for="firs-item" class="term-nav__link term-nav__link_active">Общие правила использования</label>
                         </li>
 
 
