Feat: Rewrited media query. Callback page now is working. Made little improvement at CSS.

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -134,13 +134,17 @@
 
                 <section class="content__section content__section_callback">
 
+                    <div class="content__close"><img src="../../images/contact-page/close.svg" alt="Close" class="content__image"></div>
+
                     <form action="https://echo.getpostman.com/get?test=123" method="get" class="callback-form">
 
                         <h3 class="callback-form__header">Оставьте Ваши данные и мы вам перезвоним в течении 5 минут!</h3>
 
                         <input type="text" name="name" class="callback-form__input" placeholder="Введите ваше имя">
 
-                        <input type="text" name="phone" class="callback-form__input" placeholder="Номер телефона">
+                        <input type="text" name="phone" class="callback-form__input callback-form__input_last" placeholder="Номер телефона">
+
+                        <button type="submit" value="Заказать звонок" class="callback-form__submit">Заказать звонок</button>
 
                     </form>
 
