FIx: Remade callback pop-up without positions.

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -132,9 +132,9 @@
 
                     </section>
 
-                <section class="content__section content__section_callback">
+                <section class="content__section content__section_callback content__section_invisible">
 
-                    <div class="content__close"><img src="../../images/contact-page/close.svg" alt="Close" class="content__image"></div>
+                    <div class="content__close callback"><img src="../../images/contact-page/close.svg" alt="Close" class="content__image"></div>
 
                     <form action="https://echo.getpostman.com/get?test=123" method="get" class="callback-form">
 
