FIx: Issue for callback pop-up form. Resolved problem wth close button.

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -95,7 +95,6 @@
 
                     <form action="https://echo.getpostman.com/get?test=123" method="get" class="form">
 
-
                         <div class="form__center">
                             <h3 class="form__header">Написать нам</h3>
 
@@ -109,6 +108,7 @@
 
                             <button type="submit" value="Отправить" class="form__submit">Отправить</button>
                         </div>
+
                     </form>
 
                 </section>
@@ -134,9 +134,13 @@
 
                     </section>
 
-                <section class="content__section content__section_callback content__section_invisible">
+            </div>
 
-                    <div class="content__close callback"><img src="../../images/contact-page/close.svg" alt="Close" class="content__image"></div>
+            <section class="content__section content__section_callback content__section_invisible">
+
+                <div class="content__close callback"><img src="../../images/contact-page/close.svg" alt="Close" class="content__image"></div>
+
+                <div class="container">
 
                     <form action="https://echo.getpostman.com/get?test=123" method="get" class="form form_callback">
 
@@ -151,10 +155,8 @@
                         </div>
 
                     </form>
-
-                </section>
-
-            </div>
+                </div>
+            </section>
         </main>
 
     </section>
