Help page. Did styles and mobile version.

--- a/pages/help/help.html
+++ b/pages/help/help.html
@@ -84,7 +84,58 @@
 
                 <section class="content__section content__section_questions">
 
+                    <section class="faq">
+
+                        <h3 class="faq__header">
+                            <span class="faq__text">Часто задаваемые вопросы:</span>
+                            <span class="faq__category">онкология</span>
+                        </h3>
+
+                        <article class="question">
+                            <h4 class="question__title">
+                                Надежность в наше время?
+                            </h4>
+
+                            <p class="question__answer">
+                                MEDIGO раскрывает детали и информацию о Провайдерах на основе данных, предоставленных Провайдерами, либо полученную из различных онлайн и оффлайн источников. Хотя при предоставлении услуг MEDIGO проявляет должное усердие и профессиональный подход, MEDIGO не подтверждает и не гарантирует что вся предоставленная Провайдерами информация точна, исчерпывающа и правильна. MEDIGO также не несет ответственность за любые ошибки (в том числе явные ошибки и опечатки), неточную, вводящую в заблуждение и ложную информацию, предоставленную Провайдерами, или непредоставление такой информации Провайдерами. Каждый Провайдер самостоятельно несет ответственность за точность, полноту, правильность и актуальность сведений, отображаемых на сайте MEDIGO. Сайт не следует рассматривать как рекомендацию или подтверждение качества, уровня обслуживания и квалификации какого бы то ни было Провайдера.
+                            </p>
+                        </article>
+
+                        <article class="question">
+                            <h4 class="question__title">
+                                Надежность в наше время?
+                            </h4>
+
+                            <p class="question__answer">
+                                MEDIGO раскрывает детали и информацию о Провайдерах на основе данных, предоставленных Провайдерами, либо полученную из различных онлайн и оффлайн источников. Хотя при предоставлении услуг MEDIGO проявляет должное усердие и профессиональный подход, MEDIGO не подтверждает и не гарантирует что вся предоставленная Провайдерами информация точна, исчерпывающа и правильна.
+                            </p>
+                        </article>
+
+                        <article class="question">
+                            <h4 class="question__title">
+                                Надежность в наше время?
+                            </h4>
+
+                            <p class="question__answer">
+                                MEDIGO раскрывает детали и информацию о Провайдерах на основе данных, предоставленных Провайдерами, либо полученную из различных онлайн и оффлайн источников. Хотя при предоставлении услуг MEDIGO проявляет должное усердие и профессиональный подход, MEDIGO не подтверждает и не гарантирует что вся предоставленная Провайдерами информация точна, исчерпывающа и правильна. MEDIGO также не несет ответственность за любые ошибки (в том числе явные ошибки и опечатки), неточную, вводящую в заблуждение и ложную информацию, предоставленную Провайдерами, или непредоставление такой информации Провайдерами. Каждый Провайдер самостоятельно несет ответственность за точность, полноту, правильность и актуальность сведений, отображаемых на сайте MEDIGO. Сайт не следует рассматривать как рекомендацию или подтверждение качества, уровня обслуживания и квалификации какого бы то ни было Провайдера.
+                            </p>
+                        </article>
+
+                        <article class="question">
+                            <h4 class="question__title">
+                                Надежность в наше время?
+                            </h4>
+
+                            <p class="question__answer">
+                                MEDIGO раскрывает детали и информацию о Провайдерах на основе данных, предоставленных Провайдерами, либо полученную из различных онлайн и оффлайн источников. Хотя при предоставлении услуг MEDIGO проявляет должное усердие и профессиональный подход, MEDIGO не подтверждает и не гарантирует что вся предоставленная Провайдерами информация точна, исчерпывающа и правильна.
+                            </p>
+                        </article>
+
+                    </section>
+
                     <aside class="categories">
+
+                        <h3 class="categories__title">Ответы по темам</h3>
 
                         <ul class="categories__list">
                             <li class="categories__item"><a href="#" class="categories__link">Создать аккаунт</a></li>
