Fix: Removed bugs.

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -75,17 +75,17 @@
                                 <a href="#" class="article__link article__link_red callback">Заказать звонок <span class="article__icon"></span></a>
                             </p>
 
-                            <ul class="article__contacts">
-                                <li class="article__item article__item_contacts">098 099 45 45</li>
-                                <li class="article__item article__item_contacts">meddia@info.com</li>
-                            </ul>
+                            <p class="article__contacts">
+                                <span class="article__item article__item_contacts">098 099 45 45</span>
+                                <span class="article__item article__item_contacts">meddia@info.com</span>
+                            </p>
 
                             <p class="article__text article__text_slogan">Мы в соцсетях:</p>
                             <ul class="article__social">
-                                <li class="article__item article__item_social"><a href="#" class="article__link"><img class="article__image" src="../../images/social_icons/fb.svg" alt="Facebook"></a></li>
-                                <li class="article__item article__item_social"><a href="#" class="article__link"><img class="article__image" src="../../images/social_icons/twitter.svg" alt="Twitter"></a></li>
-                                <li class="article__item article__item_social"><a href="#" class="article__link"><img class="article__image" src="../../images/social_icons/vk.svg" alt="VK"></a></li>
-                                <li class="article__item article__item_social"><a href="#" class="article__link"><img class="article__image" src="../../images/social_icons/google.svg" alt="Google+"></a></li>
+                                <li class="article__item article__item_social"><a href="#" class="article__link article__link_social article__link_social-fb"><img class="article__image" src="../../images/social_icons/fb.svg" alt="Facebook"></a></li>
+                                <li class="article__item article__item_social"><a href="#" class="article__link article__link_social article__link_social-tw"><img class="article__image" src="../../images/social_icons/twitter.svg" alt="Twitter"></a></li>
+                                <li class="article__item article__item_social"><a href="#" class="article__link article__link_social article__link_social-vk"><img class="article__image" src="../../images/social_icons/vk.svg" alt="VK"></a></li>
+                                <li class="article__item article__item_social"><a href="#" class="article__link article__link_social article__link_social-google"><img class="article__image" src="../../images/social_icons/google.svg" alt="Google+"></a></li>
                             </ul>
                         </article>
 
